--- a/app/src/main/res/layout/activity_registro_ingreso.xml
+++ b/app/src/main/res/layout/activity_registro_ingreso.xml
@@ -198,7 +198,9 @@
                         android:layout_height="48dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
 
                     <!-- Autorización -->
                     <TextView
@@ -216,7 +218,9 @@
                         android:layout_height="48dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
                 </LinearLayout>
 
                 <!-- ImageView al costado -->
