--- a/app/src/main/res/layout/activity_registro_permiso.xml
+++ b/app/src/main/res/layout/activity_registro_permiso.xml
@@ -123,10 +123,12 @@
                     <EditText
                         android:id="@+id/txtUsuario"
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
+                        android:layout_height="68dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
 
                     <!-- Género -->
                     <TextView
@@ -143,7 +145,9 @@
                         android:layout_height="48dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
 
                     <!-- Fecha de Nacimiento -->
                     <TextView
@@ -160,7 +164,9 @@
                         android:layout_height="48dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
                 </LinearLayout>
 
                 <!-- Imagen -->
