--- a/app/src/main/res/layout/activity_registro_salida.xml
+++ b/app/src/main/res/layout/activity_registro_salida.xml
@@ -197,7 +197,9 @@
                         android:inputType="none"
                         android:focusable="false"
                         android:clickable="false"
-                        android:layout_marginBottom="20dp" />
+                        android:layout_marginBottom="20dp"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
 
                     <!-- Movilidad -->
                     <TextView
@@ -214,7 +216,9 @@
                         android:layout_height="48dp"
                         android:inputType="none"
                         android:focusable="false"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false"
+                        android:cursorVisible="false"/>
                 </LinearLayout>
 
                 <!-- ImageView al costado -->
